<resources>
    <string name="app_name">LiveCity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_bares">Bares</string>
    <string name="menu_dondeDormir">Donde Dormir</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_perfil">Mi perfil</string>
    <string name="menu_queVer">Que Ver</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="abrirCamara">Abrir cámara</string>
    <string name="abrirGaleria">Abrir galería</string>
    <string name="actualizarImagen">Actualizar imagen</string>
    <string name="agregarBar">Agregar bar/restaurante</string>
    <string name="agregarCiudad">Agregar ciudad</string>
    <string name="agregarFoto">Agregar foto</string>
    <string name="agregarMonumento">Agregar lugar turístico</string>
    <string name="agregarPais">Agregar país</string>
    <string name="apellidos">Apellidos</string>
    <string name="bares">Bares y Restaurantes</string>
    <string name="calidadBar">Calidad del servicio</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="ciudad">Ciudad</string>
    <string name="descripcionBar">Descripción del bar/restaurante</string>
    <string name="descripcionCiudad">Descripción de la ciudad</string>
    <string name="descripcionLugar">Descripción del lugar</string>
    <string name="descripcionPais">Descripción del país</string>
    <string name="direccion">Dirección</string>
    <string name="dondeComer">¿Dónde comer?</string>
    <string name="dondeDormir">¿Dónde dormir?</string>
    <string name="domicilio">Domicilio</string>
    <string name="edad">Edad</string>
    <string name="editarInfo">Editar información</string>
    <string name="editProfile">Editar perfil</string>
    <string name="elegirImagen">Elegir imagen</string>
    <string name="elegirPaisCiudad">¿Qué desea agregar?</string>
    <string name="email">Introduzca su email</string>
    <string name="emailUsuario">Email</string>
    <string name="guardar">Guardar</string>
    <string name="horaApertura">Hora de apertura</string>
    <string name="horaCierre">Hora de cierre</string>
    <string name="horario">Horario</string>
    <string name="ingresar">Ingresar</string>
    <string name="miPerfil">Mi perfil</string>
    <string name="noCuenta">¿No tiene cuenta?</string>
    <string name="nombreBar">Nombre del bar/restaurante</string>
    <string name="nombreCiudad">Nombre de la ciudad</string>
    <string name="nombreLugar">Nombre del lugar</string>
    <string name="nombrePais">Nombre del país</string>
    <string name="noPais">¿No encuentra su país?</string>
    <string name="pais">País</string>
    <string name="password">Introduzca su contraseña</string>
    <string name="precioBar">Precio de los platos</string>
    <string name="profesion">Profesión</string>
    <string name="queDeseaHacer">¿Qué desea hacer?</string>
    <string name="queVer">¿Qué ver?</string>
    <string name="registro">Regístrate</string>
    <string name="repassword">Repita su contraseña</string>
    <string name="seleccionarCiudad">Seleccione una ciudad</string>
    <string name="seleccionarImagen">Seleccionar imagen</string>
    <string name="seleccionarPais">¿A qué país pertenece la ciudad?</string>
    <string name="telefono">Teléfono</string>
    <string name="tipoComida">Tipo de comida servida</string>
    <string name="usuario">Usuario</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>