<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgPerfil"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_person"
            />
        <ImageView
            android:id="@+id/imgEditarImagen"
            android:src="@drawable/ic_edit"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="@id/imgPerfil"
            app:layout_constraintBottom_toBottomOf="@id/imgPerfil"

            />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/imgPerfil">

        <TextView
            android:id="@+id/tvUsuario"
            android:textSize="22sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/usuario"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvApellidos"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/apellidos"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvEmail"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/emailUsuario"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvProfesion"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/profesion"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvDomicilio"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/domicilio"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvEdad"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/edad"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvTelefono"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/telefono"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btneditarPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editProfile"/>
        <Button
            android:id="@+id/btnCerrarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cerrarSesion"/>


    </LinearLayout>






    </androidx.constraintlayout.widget.ConstraintLayout>

