<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_gravity="center"
    >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elegirPaisCiudad"
        android:layout_gravity="center"
        />
    <Button
        android:id="@+id/btnPais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pais"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/btnCiudad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ciudad"
        android:layout_marginTop="5dp"/>


</LinearLayout>