<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SeleccionarPais">

    <TextView
        android:id="@+id/seleccionarPais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleccionarPais"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPaises"
        android:layout_above="@+id/linearAddPais"
        android:layout_below="@+id/seleccionarPais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:id="@+id/linearAddPais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noPais"
            android:layout_gravity="center"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agregarPais" />

    </LinearLayout>

</RelativeLayout>